fixed alignment of button box

--- a/css/controls.css
+++ b/css/controls.css
@@ -35,6 +35,7 @@ input[type=text] {
 .dialog-button {
     min-width: 110px;
     margin-left: 5px;
+    float: right;
 }
 
 .label {
@@ -71,9 +72,8 @@ input[type=text] {
 }
 
 .buttonbox {
+    display: inline;
     position: absolute;
-   
-    float: left;
     bottom: 8px;
     right: 8px;
 }
